Fix Nutrition table alignment

--- a/styles/recipe.css
+++ b/styles/recipe.css
@@ -44,3 +44,19 @@ body{
     color:hsl(14, 45%, 36%);
     font-weight: 700;
 }
+
+.nutri{
+    display: flex;
+    justify-content:space-between;
+    margin-left: 30px;
+}
+
+.value-two,.value-three{
+    margin-left: -20px;
+}
+
+.value-four{
+    margin-left: 4px;
+}
+
+
